# downtime

./: .coveragerc  .dockerignore  .gitignore  .python-version  .travis.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  importschedule.py  make-docs.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt  rtischedule.txt  test_settings.py
.github/: dependabot.yml
.github/workflows/: build.yaml  docs-gh-pages.yml
deploy/: docker-compose.yml
downtime/: auth_backends.py  permissions.py  schema.py  settings.py  test_runner.py  urls.py  views.py  wsgi.py
downtime/test_data/: configdb.json  doc_configdb.json
schedule/: admin.py  configdb.py  filters.py  forms.py  models.py  serializers.py  tests.py  views.py  viewsets.py
schedule/management/commands/: create_downtime.py  generateschema_mocked.py
schedule/migrations/: 0001_initial.py  0002_auto_20170801_1745.py  0003_auto_20210108_0608.py  0004_auto_20210405_2356.py
schedule/templates/: downtime_list.html
scripts/: import_rti_slots.py  import_rti_slots_2018a.py  rti_slots_2018a.csv  rti_slots_2018b.csv  rti_slots_2019a.csv  rti_slots_2019b.csv
