[tool.poetry]
name = "downtime"
version = "2.4.1"
description = "Downtime API"
authors = ["OCS Authors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.0,<3.3"
django-extensions = ">=3.1,<4.0"
django-filter = ">=2.2,<2.5"
django-bootstrap4 = ">21.1,<23.1"
django-cors-headers = ">=3.5,<3.8"
djangorestframework = ">=3.12.2,<3.13"
ocs-authentication = "0.1.0"
requests = ">=2,<3"
whitenoise = ">=5.2,<6.0"
psycopg2-binary = ">=2.8,<2.9"
gunicorn = "20.0.4"
pyyaml = "5.4.1"
uritemplate = "3.0.1"
setuptools-scm = "6.0.1"


[tool.poetry.group.dev.dependencies]
responses = ">=0.12,<1.0"
coverage = "^6.5.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
