[tool.poetry]
name = "downtime"
version = "2.4.3"
description = "Downtime API"
authors = ["OCS Authors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4"
django-extensions = "^3.2"
django-filter = "^24"
django-bootstrap4 = "^24"
django-cors-headers = "^4.4"
djangorestframework = "^3.15"
ocs-authentication = "^0.2"
requests = ">=2,<3"
whitenoise = ">=5.2,<6.0"
psycopg2-binary = ">=2.8,<2.10"
gunicorn = "20.0.4"
pyyaml = ">=6.0"
uritemplate = "3.0.1"
setuptools-scm = "6.0.1"
packaging = "^24.1"


[tool.poetry.group.dev.dependencies]
responses = ">=0.12,<1.0"
coverage = "^6.5.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
